apps/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: apps
spec:
  stripPrefix:
    prefixes:
      - /api
